Stopwatch timer working

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,10 @@
 
       <section class="main">
 
-        <span class="timer">0:00.0</span>
-        
+        <span class="timer">
+          <span class="minutes">0</span>:<span class="seconds">00</span>.<span class="decimal">0</span>
+        </span>
+
       </section>
 
       <footer class="timer-controls">
