Simple timer-driven Workout model; misc refactorings

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,14 @@
   </head>
   <body>
 
-    <section class="app">
+    <section class="app stopped">
 
       <h1>c25k web</h1>
 
       <section class="main">
+
+        <span class="event">
+        </span>
 
         <span class="timer">
           <span class="minutes">0</span>:<span class="seconds">00</span>.<span class="decimal">0</span>
