First attempt at multiple clock views

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
         <span class="event">
         </span>
 
-        <span class="timer">
-          <span class="minutes">0</span>:<span class="seconds">00</span>.<span class="decimal">0</span>
+        <span class="timers">
         </span>
 
       </section>
