First stab at an ugly workout bar; misc tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,8 @@
       <h1>c25k web</h1>
 
       <section class="main">
-
-        <span class="event">
-        </span>
-
-        <span class="timers">
-        </span>
-
+        <section class="workout"></section>
+        <section class="timers"></section>
       </section>
 
       <footer class="timer-controls">
