Add the rest of C25k schedule; misc tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <h1>c25k web</h1>
 
       <section class="main">
+        <h2 class="workoutTitle"></h2>
         <section class="workout"></section>
         <section class="timers"></section>
       </section>
