Start working on a workout chooser view

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
 
       <h1>c25k web</h1>
 
+      <section class="workoutList">
+      </section>
+
       <section class="main">
         <h2 class="workoutTitle"></h2>
         <section class="workout"></section>
